HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeArgCount/Expected.uv
//! Expected diagnostic metadata for the AsyncTypeArgCount rejected-source specimen.

expectedDiagnostic("E-CON-0201", "rule.21.WF-Async-ArgCount-Err")
